# clothing-ecommerce

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
cart_service/: __init__.py  dependency.py  main.py  run.py
cart_service/models/: __init__.py  models.py
cart_service/routers/: __init__.py  cart.py
cart_service/tests/: test_cart_router.py  test_models.py
common/: __init__.py
common/config/: __init__.py  config.py
common/inventory_client/: __init__.py  inventory_client.py
common/tests/: test_inventory_client.py
inventory_service/: __init__.py  main.py  run.py
inventory_service/core/: __init__.py  db_init.py
inventory_service/db/: __init__.py  init.py
inventory_service/models/: __init__.py  schemas.py
inventory_service/providers/: __init__.py  fake_apparel_provider.py
inventory_service/routers/: __init__.py  inventory.py
inventory_service/tests/: test_db_get_db.py  test_init_db.py  test_inventory_router.py
scripts/: create_topics.py
